<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DemoPersistencia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="label_login_nome">Nome</string>
    <string name="label_login_senha">Senha</string>
    <string name="label_login_login">Login</string>
    <string name="label_button_login_conectar">Conectar</string>
    <string name="label_conectado">Manter Conectado</string>
    <string name="msg_usuario_invalido">Usuario invalido</string>
    <string name="label_nome">Nome</string>
    <string name="label_idade">Idade</string>
    <string name="label_button_cancelar">Cancelar</string>
    <string name="label_button_salvar">Salvar</string>
    <string name="label_button_listar">Listar</string>
    <string name="label_hint_informeLogin">Informe seu login</string>
    <string name="label_hint_informePassword">Informe seu password</string>

</resources>
