<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nome"
            android:layout_gravity="left"
            android:layout_weight="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_button_selecionar"
            android:text="Sel. Nome"
            android:textAllCaps="false"
            android:layout_weight="2"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etNome"
        android:layout_width="@dimen/dimen_editText_nome"
        android:layout_height="wrap_content"
        android:hint="Informe seu nome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_idade" />

    <EditText
        android:id="@+id/etIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Informe sua idade"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:weightSum="3" >

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_salvar"
            android:layout_marginRight="@dimen/button_margin_right"
            android:layout_weight="1"
            android:onClick="salvar"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_listar"
            android:layout_marginRight="@dimen/button_margin_right"
            android:layout_weight="1"
            android:onClick="listar"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_cancelar"
            android:layout_weight="1"
            android:onClick="cancelar"
            android:textAllCaps="false"/>
        </LinearLayout>

    <ListView
        android:id="@+id/lvPessoas"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_listView_pessoas"
        android:dividerHeight="@dimen/dimen_listView_pessoas_divider" >
    </ListView>

</LinearLayout>
